Fixed issue when page is too short or does not have head-page class

--- a/resources/styles/shared/_variables.scss
+++ b/resources/styles/shared/_variables.scss
@@ -13,7 +13,7 @@
  $cyan:    map-get($color,'material-cyan');
 
  $primary:       $blue;
- $secondary:     map-get($color,'material-light-blue');
+ $secondary:     map-get($color,'material-indigo');
  $success:       $green;
  $info:          $cyan;
  $warning:       map-get($color,'material-yellow');
