--- a/resources/styles/theme/_navbar.scss
+++ b/resources/styles/theme/_navbar.scss
@@ -6,7 +6,7 @@ nav {
   }
 }
 
-nav.admin-bar-showing {
+nav.admin-bar-showing.fixed-top {
   margin-top: 32px;
 }
 
@@ -29,6 +29,7 @@ nav.admin-bar-showing {
 }
 
 .navbar-brand {
+  max-width: 200px;
   .logo-light {
     opacity: 1;
   }
